Fix h2 alignment in img header (#1127)

--- a/sitemedia/scss/components/_transcription.scss
+++ b/sitemedia/scss/components/_transcription.scss
@@ -1054,7 +1054,7 @@ html[dir="rtl"] #itt-panel {
         }
     }
     .panel-container div.img .img-header {
-        h3 {
+        h2 {
             text-align: right;
         }
         label {
